# Potato-Code

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  process.rs
src-tauri/src/commands/: claude.rs  mod.rs  sessions.rs  settings.rs
src/css/: night-owl.css  style.css
src/js/: app.js  chat.js
