[package]
name = "potato-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "potato_code_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "potato-code"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
